src/test/deca/codegen/valid/literalOP/convFloat.deca
// 2.5

// Conversion

{
    print(2 + 0.5);
}
