src/test/deca/codegen/invalid/asin_outofdomain.deca
#include "Math.decah"

{
    Math m = new Math();
    print(m.asin(-2.0));
}